--- a/styles/_products.scss
+++ b/styles/_products.scss
@@ -1,44 +1,106 @@
-.products,
-.products2 {
-  height: 70vh;
-  width: 100%;
+.first-product{
+  height: 80vh;
+  background: #CCC7AF;
   position: relative;
-  background: #eeeeee;
+  overflow: hidden;
   font-family: "Montserrat", sans-serif;
-  z-index: 10;
   display: flex;
   justify-content: space-around;
-  align-items: center;
-  flex-direction: row-reverse;
-  .products-text,
-  .products-text2 {
-    width: 30%;
-    h1 {
-      margin-bottom: 30px;
+  img{
+    position: absolute;
+    height: 70%;
+    bottom: -10%;
+    left: 20%;
+    transform: translate(-20%, 0%);
+  }
+  .price{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    align-items: center;
+    flex: 1;
+    height: 50%;
+    h2{
+      font-size: 35px;
+    }
+    h4{
+      padding: 20px 0px;
+    }
+    h3{
       font-size: 30px;
+      color: #864e4e;
     }
-    p {
-      line-height: 40px;
+  }
+  .description-container{
+    
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #1c1c1d;
+  color: #eeeeee;
+  p{
+    width: 50%;
+    line-height: 30px;
+  }
+  div{
+    height: 50%;
+    width: 50%;
+    h1{
+      text-transform: uppercase;
+      span{
+        color: #864E4E;
+      }
     }
-    button {
-      width: 50%;
+    p{
+      padding: 30px 0px;
+      width: 100%;
+    }
+    button{
+      padding: 10px 20px;
+      background-color: #864e4e;
+      color: #eeeeee;
+      border: none;
+      font-size: 15px;
       cursor: pointer;
+      font-family: "Montserrat", sans-serif;
     }
   }
-  img {
-    height: 80%;
   }
 }
 
-.products2 {
-  flex-direction: row;
-}
-
-.brown-btn {
-  background-color: #786b6b;
-  color: $textColor;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  margin-top: 15px;
+.second-product{
+  height: 80vh;
+  background: linear-gradient(to right,#ededed,#b6aaaa);
+  position: relative;
+  overflow: hidden;
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+  img{
+    position: absolute;
+    height: 50%;
+    bottom: 0%;
+    right: -10%;
+    transform: translate(10%, 0%);
+  }
+  .description-container{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    
+    div{
+      width: 50%;
+      h1{
+        font-size: 35px;
+      }
+      p{
+        padding: 30px 0px;
+        line-height: 30px;
+      }
+    }
+  }
 }
