--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,10 +1,236 @@
 @import "defaults";
 @import "intro";
 @import "products";
+@import 'footer';
+@import 'nav';
+@import 'products-page';
+@import 'contact';
+
+
+
+@media screen and (max-width: 768px) {
+  header {
+    .logo {
+      padding: 10px;
+      justify-content: center;
+     
+      img {
+        width: 40px;
+      }
+      h4 {
+        font-size: 16px;
+        font-weight: bold;
+      }
+    }
+    .intro-text {
+      justify-content: center;
+      align-items: center;
+      h1 {
+        font-size: 30px;
+        letter-spacing: 5px;
+      }
+      h3 {
+        font-size: 18px;
+        margin-top: 20px;
+      }
+    }
+    .chair {
+      height: 30%;
+      top: 70%;
+      left: 50%;
+      transform: translate(-50%,-70%);
+    }
+  
+  }
+  nav{
+    position: absolute;
+    overflow: hidden;
+  }
+  .navigation{
+    position: absolute;
+    top: 0%;
+    opacity: 1;
+    transform: translateX(120%);
+    position: fixed;
+    background-color: #1C1C1D;
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    font-size: 40px;
+    transition: all 0.5s ease;
+    li{
+      font-size: 30px;
+    }
+    .close-burger{
+      top: 5%;
+      right: 5%;
+      .line,.line2{
+        width: 30px;
+        stroke: 3px;
+      }
+    }
+  }
+  .burger{
+    height: 40px;
+
+    :nth-child(1){
+      animation: nav 0.5s ease forwards;
+    }
+    :nth-child(2){
+      animation: nav 0.5s ease forwards 0.2s;
+    }
+    :nth-child(3){
+      animation: nav 0.5s ease forwards 0.4s;
+    }
+  }
+  
+
+  .first-product{
+    flex-direction: column;
+    min-height: 100vh;
+    img{
+      height: 25%;
+      bottom: 40%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+    }
+    .price{
+      z-index: 1;
+      justify-content: flex-start;
+      margin-top: 30px;
+      h2{
+        font-size: 25px;
+      }
+      h4{
+        font-size: 16px;
+      }
+      h3{
+        font-size: 25px;
+      }
+    }
+    .description-container{
+      flex: 2;
+      div{
+        width: 90%;
+        p{
+          text-align: center;
+        }
+        h1{
+          text-align: center;
+        }
+        button{
+          width: 100%;
+        }
+      }
+    }
+
+  }
+  .second-product{
+    img{
+      height: 20%;
+      right: 50%;
+      bottom: 10%;
+      justify-content: space-around;
+      transform: translate(50%, -10%);
+    }
+    .description-container{
+      display: block;
+      width: 90%;
+      margin: 50px auto;
+      div{
+        width: 100%;
+        text-align: center;
+        h1{
+          font-size: 22px;
+        }
+      }
+    }
+  }
+  .social-links{
+    p{
+      display: none;
+    }
+  }
+  .products-title{
+    font-size: 18px;
+    align-items: flex-end;
+    height: 25vh;
+    margin-bottom: 60px;
+  }
+  .product-list{
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    div{
+      height: 300px;
+      h2{
+        font-size: 20px;
+      }
+    }
+    img{
+      height: 100px;
+    }
+  }
+  .contact{
+    display: block;
+    height: 150vh;
+    .contact-text{
+      position: static;
+      margin-top: 10vh;
+      height: 50vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      transform: none;
+      h2{
+        font-size: 30px;
+      }
+    }
+    form{
+      width: 100%;
+    }
+  }
+}
+
+
+
+.burger{
+  position: fixed;
+  right: 10%;
+  top: 3%;
+  cursor: pointer;
+  transform: translate(-10%, -3%);
+  :nth-child(1){
+    stroke-dasharray: 83;
+    stroke-dashoffset: 83;
+
+  }
+  :nth-child(2){
+    stroke-dasharray: 57;
+    stroke-dashoffset: 57;
+
+  }
+  :nth-child(3){
+    stroke-dasharray: 33;
+    stroke-dashoffset: 33;
+
+  }
+}
 
 .slide-left {
   opacity: 0;
   transform: translateX(-100px);
+  transition: opacity 1s ease, transform 1s ease;
+}
+.no-slide{
+  transition: opacity 0.5s ease;
+  opacity: 0;
+
+}
+
+.slide-up{
+  opacity: 0;
+  transform: translateY(100px);
   transition: opacity 1s ease, transform 1s ease;
 }
 
@@ -12,6 +238,50 @@
   opacity: 1;
   transform: translateX(0);
 }
+
+.navigation{
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.nav-fade{
+  opacity: 0;
+  transform: translateX(50px);
+}
+
+.open{
+  opacity: 1;
+  transform: translateX(0px);
+  position: fixed;
+  background-color: #1C1C1D;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  flex-direction: column;
+  align-items: center;
+  font-size: 40px;
+
+}
+.close-burger{
+  position: absolute;
+  top: 10%;
+  right: 10%;
+  cursor: pointer;
+  padding: 30px;
+  display: none;
+}
+.line,.line2{
+  background-color: #eeeeee;
+  height: 5px;  
+  width: 50px;
+}
+.line{
+  transform: rotateZ(45deg);
+}
+.line2{
+  transform: translateY(-5px) rotateZ(-45deg);
+}
+
 
 @keyframes titleAnimation {
   from {
@@ -33,68 +303,23 @@
   }
 }
 
-@media screen and (max-width: 768px) {
-  header {
-    .logo {
-      padding: 10px;
-      justify-content: center;
-      img {
-        width: 40px;
-      }
-      h4 {
-        font-size: 16px;
-        font-weight: bold;
-      }
-    }
-    .intro-text {
-      justify-content: center;
-      align-items: center;
-      h1 {
-        font-size: 40px;
-      }
-      h3 {
-        font-size: 20px;
-        margin-top: 10px;
-      }
-    }
-    .chair {
-      height: 50%;
-      bottom: 0%;
-    }
-    .big-rose {
-      height: 50px;
-      left: 20%;
-      top: 50%;
-    }
-    .small-rose {
-      height: 20px;
-    }
+@keyframes nav{
+  0%{
+    opacity: 0;
   }
-  .products,
-  .products2 {
-    display: block;
-    height: 100vh;
-    .products-text,
-    .products-text2 {
-      text-align: center;
-      width: 100%;
-      h1 {
-        text-align: center;
-        padding: 30px;
-      }
-      p {
-        padding: 0 30px 30px 30px;
-      }
-      button {
-        margin: 10px;
-      }
-    }
-    img {
-      height: 40%;
-      position: absolute;
-      bottom: 0px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
+  20%{
+    opacity: 1;
+  }
+  100%{
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes navFade{
+  from{
+    opacity: 1;
+  }
+  to{
+    opacity: 0;
   }
 }
