--- a/styles/style.css
+++ b/styles/style.css
@@ -94,7 +94,7 @@ header .big-rose {
 
 .first-product {
   height: 80vh;
-  background: #CCC7AF;
+  background: #ccc7af;
   position: relative;
   overflow: hidden;
   font-family: "Montserrat", sans-serif;
@@ -182,7 +182,7 @@ header .big-rose {
 }
 
 .first-product .description-container div h1 span {
-  color: #864E4E;
+  color: #864e4e;
 }
 
 .first-product .description-container div p {
@@ -232,7 +232,7 @@ header .big-rose {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 50%;
+  height: 80%;
 }
 
 .second-product .description-container div {
