--- a/styles/_products.scss
+++ b/styles/_products.scss
@@ -89,7 +89,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80%;
+    height: 100%;
 
     div {
       width: 50%;
@@ -99,6 +99,15 @@
       p {
         padding: 30px 0px;
         line-height: 30px;
+      }
+      button {
+        padding: 10px 20px;
+        background-color: #864e4e;
+        color: #eeeeee;
+        border: none;
+        font-size: 15px;
+        cursor: pointer;
+        font-family: "Montserrat", sans-serif;
       }
     }
   }
