--- a/styles/style.css
+++ b/styles/style.css
@@ -232,7 +232,7 @@ header .big-rose {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 80%;
+  height: 100%;
 }
 
 .second-product .description-container div {
@@ -246,6 +246,16 @@ header .big-rose {
 .second-product .description-container div p {
   padding: 30px 0px;
   line-height: 30px;
+}
+
+.second-product .description-container div button {
+  padding: 10px 20px;
+  background-color: #864e4e;
+  color: #eeeeee;
+  border: none;
+  font-size: 15px;
+  cursor: pointer;
+  font-family: "Montserrat", sans-serif;
 }
 
 footer {
