--- a/styles/_products.scss
+++ b/styles/_products.scss
@@ -1,5 +1,5 @@
 .first-product {
-  height: 80vh;
+  min-height: 100vh;
   background: #ccc7af;
   position: relative;
   overflow: hidden;
@@ -8,7 +8,7 @@
   justify-content: space-around;
   img {
     position: absolute;
-    height: 70%;
+    height: 60%;
     bottom: -10%;
     left: 20%;
     transform: translate(-20%, 0%);
@@ -17,10 +17,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
     align-items: center;
     flex: 1;
-    height: 50%;
+
     h2 {
       font-size: 35px;
     }
@@ -30,6 +29,7 @@
     h3 {
       font-size: 30px;
       color: #864e4e;
+      margin-bottom: 8rem;
     }
   }
   .description-container {
@@ -40,6 +40,7 @@
     align-items: center;
     background-color: #1c1c1d;
     color: #eeeeee;
+    min-height: 100%;
     p {
       width: 50%;
       line-height: 30px;
@@ -71,7 +72,7 @@
 }
 
 .second-product {
-  height: 80vh;
+  min-height: 80vh;
   background: linear-gradient(to right, #ededed, #b6aaaa);
   position: relative;
   overflow: hidden;
@@ -89,7 +90,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    min-height: 100%;
 
     div {
       width: 50%;
